k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs
    spec:
      containers:
      - image: waiyanwinhtain/sample-nodejs:latest
        name: sample-nodejs
        ports:
        - containerPort: 3000
        resources: {}
status: {}
