k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-svc
  namespace: default
spec:
  tls:
  - hosts:
    - nodejs.dopevs.cloud
    secretName: dopevs-cloud-wildcard
  rules:
    - host: nodejs.dopevs.cloud
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  nodejs
                port:
                  number: 80
